--- a/assets/style.css
+++ b/assets/style.css
@@ -374,11 +374,38 @@ select:focus {
 /* Sample results page */
 
 .sample-results {
+    color: white;
     padding: 0.5rem;
     display: grid;
     grid-template-columns: repeat( auto-fit, minmax(calc(280px - 2*var(--container-padding)), 1fr));
     gap: 2rem;
+    border-radius: 1rem;
+    background-color: rgba(1, 22, 30, 0.6);
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
+
+.title-with-bg{
+    color: white;
+    max-width: 500px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding: 0.5rem;
+    border-radius: 1rem;
+    background-color: rgba(1, 22, 30, 0.6);
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+/* 
+.welcome {
+    text-align: center;
+    max-width: 500px;
+    color: white;
+    margin: 1rem auto 0 auto;
+    border-radius: 1rem;
+    font-weight: 400;
+    background-color: rgba(1, 22, 30, 0.6);
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    padding: 2rem;
+} */
 
 .result-info {
     display: flex;
