--- a/assets/style.css
+++ b/assets/style.css
@@ -486,17 +486,6 @@ select:focus {
     max-width: 600px;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
-/* text-align: center;
-display: flex;
-flex-direction: column;
-margin: auto;
-padding: 1rem 0;
-gap: 0.75rem;
-align-items: center;
-max-width: 600px;
-background-color: var(--alt-clr);
-color: white;
-border-radius: 1em; */
 
 /* Sample Submission Page */
 
@@ -520,6 +509,20 @@ border-radius: 1em; */
 .image-icon {
     margin: 20px;
     color: green;
+}
+
+.submission-form {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    padding: 1rem 0;
+    gap: 0.75rem;
+    align-items: center;
+    max-width: 600px;
+    background-color: var(--alt-clr);
+    color: white;
+    border-radius: 1em;
 }
 
 /* Register page */
@@ -560,6 +563,11 @@ border-radius: 1em; */
     margin: auto;
     padding: 0.5rem 1rem;
     border-radius: 2rem;
+}
+
+.gym-description{
+    min-width: 20rem;
+    min-height: 6rem;
 }
 
 .registration-form input:focus {
